--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#header {
+  background-color: #242323;
+  width: 100%;
+  height: 250px;
+  color: white;
+  margin-top: -32px;
+}
+
+#header p {
+  font-size: 2em;
+  margin-left: 30px;
+  width: 234px;
+  margin-top: 100px;
+  display: inline-block;
+}
