--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.DontUnderstarndText{
+
+  font-size: 30px;
+  color: #900;
+
+}
