--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ code {
 }
 
 .button_info {
-  background-color: transparent;
+  /* background-color: transparent; */
   border-radius: 5px;
   border: 1px solid white;
   color: white;
