--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,46 @@ code {
 }
 
 #header {
-  background-color: #242323;
+  background-color: #3b231e;
   width: 100%;
   height: 250px;
   color: white;
   margin-top: -32px;
+}
+
+#header_nav {
+  background-color: #e7dac3;
+  height: 50px;
+  display: block;
+}
+
+.nav_item {
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 50px;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.nav_item:hover {
+  background-color: #0000004d;
+}
+
+.nav_item_active:hover {
+  background-color: #0000004d;
+}
+
+.nav_item_active {
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 50px;
+  color: black;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  border-bottom: 1px solid black;
 }
 
 #header p {
@@ -66,11 +101,12 @@ code {
 }
 
 .button_info {
-  /* background-color: transparent; */
+  background-color: transparent;
   border-radius: 5px;
   border: 1px solid white;
   color: white;
   padding: 5px;
+  margin: 5px;
 }
 
 #Question_box button:hover {
@@ -90,7 +126,7 @@ code {
   margin-right: auto;
   margin-left: auto;
   width: 450px;
-  height: 30px;
+  height: 40px;
   background-color: #36365c;
   color: white;
   border-top-left-radius: 5px;
