--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,30 @@ code {
     monospace;
 }
 
+@keyframes appear {
+    from {
+      -ms-transform: translate(0px, -10px); /* IE 9 */
+      -webkit-transform: translate(0px, -10px); /* Safari */
+      transform: translate(0px, -10px);
+      opacity: 0;
+          }
+    to {
+      -ms-transform: translate(0px, 0px); /* IE 9 */
+      -webkit-transform: translate(0px, 0px); /* Safari */
+      transform: translate(0px, 0px);
+      opacity: 100;
+    }
+}
+
+@keyframes enlarge {
+    from {
+      height: 200px;
+    }
+    to {
+      height: 230px;
+    }
+}
+
 #header {
   background-color: #3b231e;
   width: 100%;
@@ -150,4 +174,91 @@ code {
   color: white;
   text-decoration: none;
   display: inline-block;
+}
+
+.welcome_page_text {
+  width: 100%;
+  text-align: center;
+  font-size: 2em;
+  color: red;
+  background-color: wheat;
+  display: inline-block;
+}
+
+.welcome_page_text:hover {
+  color: pink;
+}
+
+.welcome_page_text p {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+#welcome_page_text_img {
+  width: 100%;
+  height: 200px;
+  background-image: url('/lecture_room.jpg');
+  background-attachment: fixed;
+  font-size: 2em;
+  color: white;
+}
+
+#welcome_page_text_img p {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  display: inline-block;
+}
+
+#welcome_page_text_img:hover {
+  animation-name: enlarge;
+  animation-duration: 3s;
+}
+
+#footer {
+  width: 100%;
+  height: 250px;
+  background-color: #0c0c0c;
+  display: block;
+  overflow: hidden;
+  color: white;
+}
+
+#footer_nav {
+  width: 100px;
+  display: inline-block;
+  float: left;
+  margin-left: 20px;
+}
+
+.footer_nav_item {
+  margin-top: 5px;
+}
+
+.footer_nav_item:hover {
+  background-color: grey;
+}
+
+.footer_nav_link {
+  text-decoration: none;
+  color: white;
+}
+
+#header_logo {
+  width: 150px;
+  height: 150px;
+  background-color: violet;
+  margin-top: 110px;
+  margin-left: 20px;
+  float: left;
+  border: 3px solid #f5149b;
+}
+
+#footer_logo {
+  width: 200px;
+  height: 200px;
+  background-color: wheat;
+  border: 3px solid #bdbd1b;
+  margin-top: 20px;
+  float: right;
+  margin-right: 20px;
 }
