--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,12 @@ code {
   margin-bottom: 20px;
   margin-right:auto;
   margin-left: auto;
-  height: 40px;
+
+}
+
+.longWord{
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .question {
@@ -159,14 +164,14 @@ code {
   margin-right:auto;
   margin-left: auto;
   min-width: 200px;
-  height: 40px;
+
   background-color: #36365c;
   color: white;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
-
+  padding-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
 }
