--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@ code {
 #Question_box {
   margin-top: 100px;
   margin-bottom: 100px;
-  width: 400px;
+  width:400px;
   min-height: 250px;
   border: 10px solid pink;
   background-color: #e6526c;
@@ -112,7 +112,7 @@ code {
   font-size: 0.5em;
   width: 100px;
   display: block;
-  float: right;
+  float:right;
   margin: 0;
 }
 
@@ -145,12 +145,16 @@ code {
   margin-bottom: 10px;
 }
 
+.progress{
+  margin: 10px;
+}
+
 .btn{
 
   margin-right:auto;
   margin-left: auto;
   text-transform: uppercase;
-  font-family: arial black;
+  font-family: impact;
 }
 
 .longWord{
@@ -159,7 +163,12 @@ code {
 }
 
 .row{
-  padding: 20px;
+  padding: 5px;
+}
+
+.progress{
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .question {
@@ -258,6 +267,10 @@ code {
 .footer_nav_link {
   text-decoration: none;
   color: white;
+}
+
+#questionList{
+  margin: 30px 0px 0px 25px;
 }
 
 #header_logo {
